--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">35,570</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">2,082</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.orangehrm.tests.LoginPageTest</td><td><a href="#m0">ValidateLogin</a></td><td rowspan="1">1716987348178</td><td rowspan="1">30707</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.orangehrm.apitests.RestAssuredApiTest</td><td><a href="#m0">VerifyGetApi</a></td><td rowspan="1">1717113510710</td><td rowspan="1">1294</td></tr><tr class="passedeven"><td><a href="#m1">VerifyPostApi</a></td><td rowspan="1">1717113512006</td><td rowspan="1">379</td></tr><tr class="passedeven"><td><a href="#m2">VerifyPutApi</a></td><td rowspan="1">1717113512386</td><td rowspan="1">391</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.orangehrm.tests.LoginPageTest#ValidateLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.orangehrm.apitests.RestAssuredApiTest#VerifyGetApi</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.orangehrm.apitests.RestAssuredApiTest#VerifyPostApi</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.orangehrm.apitests.RestAssuredApiTest#VerifyPutApi</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
