--- a/test-output/index.html
+++ b/test-output/index.html
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Default_suite" class="navigator-link ">
-                    <span>0 groups</span>
+                    <span>1 group</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.orangehrm.tests.LoginPageTest" class="method navigator-link" hash-for-method="ValidateLogin">ValidateLogin</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.orangehrm.apitests.RestAssuredApiTest" class="method navigator-link" hash-for-method="VerifyGetApi">VerifyGetApi</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.orangehrm.apitests.RestAssuredApiTest" class="method navigator-link" hash-for-method="VerifyPostApi">VerifyPostApi</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.orangehrm.apitests.RestAssuredApiTest" class="method navigator-link" hash-for-method="VerifyPutApi">VerifyPutApi</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,16 +132,28 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.orangehrm.tests.LoginPageTest</span>
+              <span class="class-name">com.orangehrm.apitests.RestAssuredApiTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="ValidateLogin">
-                  </a> <!-- ValidateLogin -->
-                  <span class="method-name">ValidateLogin</span>
-                  <em>
-(Verifying loginpage test)                  </em>
+                  <a name="VerifyGetApi">
+                  </a> <!-- VerifyGetApi -->
+                  <span class="method-name">VerifyGetApi</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="VerifyPostApi">
+                  </a> <!-- VerifyPostApi -->
+                  <span class="method-name">VerifyPostApi</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="VerifyPutApi">
+                  </a> <!-- VerifyPutApi -->
+                  <span class="method-name">VerifyPutApi</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -139,7 +161,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/h6/78vmgptx3j12pc3wfzt4qty00000gn/T/testng-eclipse-1074118265/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/h6/78vmgptx3j12pc3wfzt4qty00000gn/T/testng-eclipse--685597084/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,7 +170,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.orangehrm.tests.LoginPageTest&quot;/&gt;
+      &lt;class name=&quot;com.orangehrm.apitests.RestAssuredApiTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -172,6 +194,22 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="test-group">
+              <span class="test-group-name">apitests</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">VerifyGetApi</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">VerifyPostApi</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">VerifyPutApi</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -188,16 +226,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'ValidateLogin')
-data.setCell(0, 2, 'com.orangehrm.tests.LoginPageTest')
-data.setCell(0, 3, 30707);
+data.setCell(0, 1, 'VerifyGetApi')
+data.setCell(0, 2, 'com.orangehrm.apitests.RestAssuredApiTest')
+data.setCell(0, 3, 1294);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'VerifyPutApi')
+data.setCell(1, 2, 'com.orangehrm.apitests.RestAssuredApiTest')
+data.setCell(1, 3, 391);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'VerifyPostApi')
+data.setCell(2, 2, 'com.orangehrm.apitests.RestAssuredApiTest')
+data.setCell(2, 3, 379);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 30 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -223,35 +269,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.orangehrm.tests.LoginPageTest</div> <!-- chronological-class-name -->
-              <div class="configuration-suite before">
-                <span class="method-name">setUpSuite</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-suite before -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp(public void com.orangehrm.tests.LoginPageTest.ValidateLogin() throws java.lang.InterruptedException,...)</span>
-                <span class="method-start">119 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">1587 ms</span>
-              </div> <!-- configuration-method before -->
+              <div class="chronological-class-name">com.orangehrm.apitests.RestAssuredApiTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">ValidateLogin</span>
-                <span class="method-start">4862 ms</span>
+                <span class="method-name">VerifyGetApi</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">35572 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown([TestResult name=ValidateLogin status=SUCCESS method=LoginPageTest.ValidateLogin()[pri:1, instance:c...)</span>
-                <span class="method-start">35678 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-suite after">
-                <span class="method-name">tearDownSuite</span>
-                <span class="method-start">35693 ms</span>
-              </div> <!-- configuration-suite after -->
+              <div class="test-method">
+                <span class="method-name">VerifyPostApi</span>
+                <span class="method-start">1296 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">VerifyPutApi</span>
+                <span class="method-start">1676 ms</span>
+              </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
