--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>apitests</td><td>RestAssuredApiTest.VerifyPutApi()[pri:0, instance:com.orangehrm.apitests.RestAssuredApiTest@2b6faea6]<br/>RestAssuredApiTest.VerifyGetApi()[pri:0, instance:com.orangehrm.apitests.RestAssuredApiTest@2b6faea6]<br/>RestAssuredApiTest.VerifyPostApi()[pri:0, instance:com.orangehrm.apitests.RestAssuredApiTest@2b6faea6]<br/></td></tr>
+</table>
