--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,25 +4,35 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.orangehrm.apitests.RestAssuredApiTest</td>
+<td>com.orangehrm.tests.LoginPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyPutApi</td>
-<td>apitests </td>
+<td>AddEmployee</td>
+<td>uitests </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyGetApi</td>
-<td>apitests </td>
+<td>AddEmployeesSql</td>
+<td>uitests </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>VerifyPostApi</td>
-<td>apitests </td>
+<td>AddEmployeesExcel</td>
+<td>uitests </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ValidateLogin</td>
+<td>uitests </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>AddEmployeesDataProvider</td>
+<td>uitests </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -31,8 +41,24 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>teardown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
