--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>apitests</td><td>RestAssuredApiTest.VerifyPutApi()[pri:0, instance:com.orangehrm.apitests.RestAssuredApiTest@2b6faea6]<br/>RestAssuredApiTest.VerifyGetApi()[pri:0, instance:com.orangehrm.apitests.RestAssuredApiTest@2b6faea6]<br/>RestAssuredApiTest.VerifyPostApi()[pri:0, instance:com.orangehrm.apitests.RestAssuredApiTest@2b6faea6]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>uitests</td><td>LoginPageTest.AddEmployeesDataProvider(java.util.List)[pri:5, instance:com.orangehrm.tests.LoginPageTest@cd3fee8]<br/></td></tr>
 </table>
