--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.orangehrm.tests.LoginPageTest.AddEmployeesExcel<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Adding Employees details from excel sheet using java</i></td></tr>
+<tr><td>com.orangehrm.tests.LoginPageTest.AddEmployeesSql<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Adding Employees details from Database sql server</i></td></tr>
+<tr><td>com.orangehrm.tests.LoginPageTest.AddEmployee<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Adding Single employee details</i></td></tr>
+<tr><td>com.orangehrm.tests.LoginPageTest.ValidateLogin<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Verifying loginpage test</i></td></tr>
 </table>
