--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.orangehrm.apitests.RestAssuredApiTest" class="method navigator-link" hash-for-method="VerifyGetApi">VerifyGetApi</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.orangehrm.apitests.RestAssuredApiTest" class="method navigator-link" hash-for-method="VerifyPostApi">VerifyPostApi</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.orangehrm.apitests.RestAssuredApiTest" class="method navigator-link" hash-for-method="VerifyPutApi">VerifyPutApi</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.orangehrm.tests.LoginPageTest" class="method navigator-link" hash-for-method="AddEmployeesDataProvider([[Reenu, Desai, 5543.0, rdesai, Rd12345#], [Sachin, Gowarkar, 5544.0, sgowarkar, Sg12345#], [Kavya, ...)">AddEmployeesDataProvider([[Reenu, Desai, 5543.0, rdesai, Rd12345#], [Sachin, Gowarkar, 5544.0, sgowarkar, Sg12345#], [Kavya, ...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,28 +122,17 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.orangehrm.apitests.RestAssuredApiTest</span>
+              <span class="class-name">com.orangehrm.tests.LoginPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="VerifyGetApi">
-                  </a> <!-- VerifyGetApi -->
-                  <span class="method-name">VerifyGetApi</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="VerifyPostApi">
-                  </a> <!-- VerifyPostApi -->
-                  <span class="method-name">VerifyPostApi</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="VerifyPutApi">
-                  </a> <!-- VerifyPutApi -->
-                  <span class="method-name">VerifyPutApi</span>
+                  <a name="AddEmployeesDataProvider([[Reenu, Desai, 5543.0, rdesai, Rd12345#], [Sachin, Gowarkar, 5544.0, sgowarkar, Sg12345#], [Kavya, ...)">
+                  </a> <!-- AddEmployeesDataProvider([[Reenu, Desai, 5543.0, rdesai, Rd12345#], [Sachin, Gowarkar, 5544.0, sgowarkar, Sg12345#], [Kavya, ...) -->
+                  <span class="method-name">AddEmployeesDataProvider</span>
+                  <span class="parameters">([[Reenu, Desai, 5543.0, rdesai, Rd12345#], [Sachin, Gowarkar, 5544.0, sgowarkar, Sg12345#], [Kavya, Pinchal, 5545.0, kpinchal, Kp12345#], [Raj, Chaddha, 5546.0, rchaddha, Rc12345#], [Revathi , Krishnan, 5547.0, rkrishnan, Rk12345#], [Vinay, Deshpande, 5548.0, vdeshpande, Vd12345#]])</span>
+                  <em>
+(Adding Employees details from excel sheet using Testng DataProvider)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -161,7 +140,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/h6/78vmgptx3j12pc3wfzt4qty00000gn/T/testng-eclipse--685597084/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/h6/78vmgptx3j12pc3wfzt4qty00000gn/T/testng-eclipse-47018976/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -170,7 +149,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.orangehrm.apitests.RestAssuredApiTest&quot;/&gt;
+      &lt;class name=&quot;com.orangehrm.tests.LoginPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -195,18 +174,10 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
-              <span class="test-group-name">apitests</span>
+              <span class="test-group-name">uitests</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">VerifyGetApi</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">VerifyPostApi</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">VerifyPutApi</span>
+                <span class="method-in-group-name">AddEmployeesDataProvider</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -226,24 +197,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'VerifyGetApi')
-data.setCell(0, 2, 'com.orangehrm.apitests.RestAssuredApiTest')
-data.setCell(0, 3, 1294);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'VerifyPutApi')
-data.setCell(1, 2, 'com.orangehrm.apitests.RestAssuredApiTest')
-data.setCell(1, 3, 391);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'VerifyPostApi')
-data.setCell(2, 2, 'com.orangehrm.apitests.RestAssuredApiTest')
-data.setCell(2, 3, 379);
+data.setCell(0, 1, 'AddEmployeesDataProvider')
+data.setCell(0, 2, 'com.orangehrm.tests.LoginPageTest')
+data.setCell(0, 3, 115328);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -258,9 +221,22 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">4 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.orangehrm.tests.LoginPageTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">AddEmployeesExcel</span>
+                <br/>
+                <span class="ignored-method-name">AddEmployeesSql</span>
+                <br/>
+                <span class="ignored-method-name">AddEmployee</span>
+                <br/>
+                <span class="ignored-method-name">ValidateLogin</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -269,19 +245,35 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.orangehrm.apitests.RestAssuredApiTest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">VerifyGetApi</span>
+              <div class="chronological-class-name">com.orangehrm.tests.LoginPageTest</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">setUpSuite</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
+              </div> <!-- configuration-suite before -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp(public void com.orangehrm.tests.LoginPageTest.AddEmployeesDataProvider(java.util.List) throws java.l...)</span>
+                <span class="method-start">545 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">2729 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">VerifyPostApi</span>
-                <span class="method-start">1296 ms</span>
+                <span class="method-name">AddEmployeesDataProvider([[Reenu, Desai, 5543.0, rdesai, Rd12345#], [Sachin, Gowarkar, 5544.0, sgowarkar, Sg12345#], [Kavya, ...)</span>
+                <span class="method-start">13331 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">VerifyPutApi</span>
-                <span class="method-start">1676 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">teardown</span>
+                <span class="method-start">128665 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown([TestResult name=AddEmployeesDataProvider status=SUCCESS method=LoginPageTest.AddEmployeesDataProvid...)</span>
+                <span class="method-start">128816 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-suite after">
+                <span class="method-name">tearDownSuite</span>
+                <span class="method-start">128833 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
