--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e0979d">  <td>24/05/31 05:28:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RestAssuredApiTest.VerifyGetApi()[pri:0, instance:com.orangehrm.apitests.RestAssuredApiTest@2b6faea6]">VerifyGetApi</td> 
+<tr bgcolor="e0979d">  <td>24/06/02 22:36:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.AddEmployeesDataProvider(java.util.List)[pri:5, instance:com.orangehrm.tests.LoginPageTest@cd3fee8]">AddEmployeesDataProvider</td> 
   <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="e0979d">  <td>24/05/31 05:28:32</td>   <td>1297</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RestAssuredApiTest.VerifyPostApi()[pri:0, instance:com.orangehrm.apitests.RestAssuredApiTest@2b6faea6]">VerifyPostApi</td> 
-  <td>main@498931366</td>   <td></td> </tr>
-<tr bgcolor="e0979d">  <td>24/05/31 05:28:32</td>   <td>1677</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RestAssuredApiTest.VerifyPutApi()[pri:0, instance:com.orangehrm.apitests.RestAssuredApiTest@2b6faea6]">VerifyPutApi</td> 
-  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="e0979d">  <td>24/06/02 22:36:22</td>   <td>-10602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.orangehrm.tests.LoginPageTest@cd3fee8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="93de87">  <td>24/06/02 22:36:20</td>   <td>-12786</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BasePage.setUp(java.lang.reflect.Method)[pri:0, instance:com.orangehrm.tests.LoginPageTest@cd3fee8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="93de87">  <td>24/06/02 22:36:20</td>   <td>-13329</td> <td title="&gt;&gt;BasePage.setUpSuite()[pri:0, instance:com.orangehrm.tests.LoginPageTest@cd3fee8]">&gt;&gt;setUpSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="93de87">  <td>24/06/02 22:38:28</td>   <td>115485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BasePage.tearDown(org.testng.ITestResult)[pri:0, instance:com.orangehrm.tests.LoginPageTest@cd3fee8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="93de87">  <td>24/06/02 22:38:28</td>   <td>115503</td> <td title="&lt;&lt;BasePage.tearDownSuite()[pri:0, instance:com.orangehrm.tests.LoginPageTest@cd3fee8]">&lt;&lt;tearDownSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="e0979d">  <td>24/06/02 22:38:28</td>   <td>115334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.orangehrm.tests.LoginPageTest@cd3fee8]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
 </table>
